# aoc-2021

./: .gitignore  README.md  pyproject.toml
ocaml/: day01.ml
ocaml/solutions/: dune-project
ocaml/solutions/lib/: .merlin  day01.ml  day02.ml  dune
ocaml/solutions/test/: .merlin
python/: pyproject.toml  runner.py
python/solutions/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day23.py  start_day.py  utils.py
