[tool.poetry]
name = "aoc-2021"
version = "0.0.1"
description = "Advent of Code 2021 Solutions (Python 3)"
authors = ["Ryan Downing <ryansdowning1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
advent-of-code-data = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
